Fix spacing between main inner boxes
Justified the two inner boxes evenly inside the main box.

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    justify-content: space-evenly;
 }
 
 .header
